syntax = "proto3";

package user.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/wrappers.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/user/v1";

message UpdateRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "UpdateRequest"
      description: "Request to update user"
    }
    external_docs: {
      url: "http://localhost:8086/?urls.primaryName=User%20v1"
      description: "Request to update user"
    }
    example: '{"first_name":"Sinbad","last_name":"Sailor","email":"foo@bar.baz","old_password":"1234567890","new_password":"1234567890"}'
  };

  // User ID
  int64 id = 1 [
    (buf.validate.field).int64.gte = 0,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'ID int64 `json:"id"`'
    }
  ];

  // User first name
  google.protobuf.StringValue first_name = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'FirstName sql.NullString `json:"first_name"`'
    }
  ];

  // User last name
  google.protobuf.StringValue last_name = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'LastName sql.NullString `json:"last_name"`'
    }
  ];

  // User email
  google.protobuf.StringValue email = 4 [
    (buf.validate.field).string.email = true,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'Email string `json:"email"`'
    }
  ];

  // User old password
  google.protobuf.StringValue old_password = 5 [
    (buf.validate.field).cel = {
      id: "update_request.old_password",
      message: "must be 8 - 72 characters long and only contain letters and digits",
      expression: "this.matches('^[-_ A-Za-z0-9]{8,72}$')"
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'OldPassword string `json:"old_password"`'
    }
  ];

  // User new password
  google.protobuf.StringValue new_password = 6 [
    (buf.validate.field).cel = {
      id: "update_request.new_password",
      message: "must be 8 - 72 characters long and only contain letters and digits",
      expression: "this.matches('^[-_ A-Za-z0-9]{8,72}$')"
    },
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'NewPassword string `json:"new_password"`'
    }
  ];
}
